--- a/taller_ar2.html
+++ b/taller_ar2.html
@@ -24,6 +24,15 @@
           width="1"
           height="0.75"
         ></a-image>
+          <!-- Texto encima de la imagen -->
+        <a-text
+          value="Figura Imposible de José María Yturralde"
+          position="0 1 0"
+          rotation="-90 0 0"
+          align="center"
+          color="white"
+          width="2"
+        ></a-text>
       </a-marker>
 
       <!-- Cámara -->
