quitados acentos para evitar error en texto

--- a/bucea2.html
+++ b/bucea2.html
@@ -26,7 +26,7 @@
         ></a-image>
           <!-- Texto encima de la imagen -->
         <a-text
-          value="Figura Imposible de José María Yturralde"
+          value="Figura Imposible de Jose Maria Yturralde"
           position="0 1 0"
           rotation="-90 0 0"
           align="center"
