arreglados los textos

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                         <span class="text-sm text-gray-600 block">RA con arte incrustado, un marcador y la cámara del móvil</span>
                     </a>
                 </li>
+                 <li class="bg-orange-50 p-4 rounded-md shadow-sm hover:bg-orange-100 transition duration-300 ease-in-out">
+                    <a href="./an_datos.html" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
+                        Feedback y Análisis de datos: 
+                        <span class="text-sm text-gray-600 block">Simulación de datos recopilados en el museo</span>
+                    </a>
+                </li>
                 
             </ul>
         </section>
